# Roguelike

./: .gitignore  Cargo.toml  README.md  savegame.json  test.ron
prefabs/: config.ron  spawns.ron  test.ron
resources/: b_inventory.xp  b_settings.xp  b_ui.xp  blank_ui.xp  title_screen.xp  titlescreen.xp  visual_scene.xp
resources/audio/: audio.txt
resources/xp_files/: audio.xp  keybindings.xp  visual.xp
src/: audio.rs  camera.rs  components.rs  constants.rs  damage_system.rs  game_log.rs  gamelog.rs  gui.rs  inventory_system.rs  item_systems.rs  main.rs  map.rs  map_indexing_system.rs  melee_combat_system.rs  monster_ai_system.rs  particle_system.rs  player.rs  random_table.rs  rex_assets.rs  save_load_util.rs  saveload_system.rs  spawner.rs  specs_helpers.rs  state.rs  visibility_system.rs
src/ecs/: components.rs  mod.rs
src/ecs/systems/: damage_system.rs  item_systems.rs  map_indexing_system.rs  melee_combat_system.rs  mod.rs  (+3 more)
src/gui/: game_over.rs  hud.rs  inventory.rs  main_menu.rs  mod.rs  targeting.rs
src/map_builder/: bsp_interior.rs  bsp_interior_builder.rs  bsp_map_builder.rs  cellular_automata_builder.rs  common.rs  drunkard_builder.rs  map.rs  maze_builder.rs  mod.rs  rect.rs  simple_map.rs  simple_map_builder.rs
src/pieces/: components.rs  game_state.rs  mod.rs  rect.rs
src/raws/: mod.rs  raw_master.rs
src/spawning/: mod.rs  random_table.rs  spawner.rs
src/systems/: damage_system.rs  item_systems.rs  map_indexing_system.rs  melee_combat_system.rs  mod.rs  monster_ai_system.rs  particle_system.rs  saveload_system.rs  visibility_system.rs
(+14 files in other folders)
