[package]
name = "roguelike"
version = "0.1.0"
authors = ["Zij-IT <elijah.reed@hartvigsen.xyz>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Zij-IT/Roguelike"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rltk = { version = "0.8.1", features = ["serde"] }
specs = { version = "0.16.1", features = ["serde"] }
specs-derive = "0.4.1"
serde = {version = "1.0.93", features = ["derive"] }
serde_json = "1.0.39"
ron = "0.6.4"
strum = { version = "0.20", features = ["derive"] }
lazy_static = "1.4.0"
